--- a/DotFramework/DotAsset/DotAsset/DotAsset.csproj
+++ b/DotFramework/DotAsset/DotAsset/DotAsset.csproj
@@ -21,6 +21,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -29,8 +31,25 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\DotLibs\DotAsset.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotLibs\DotCore.dll</HintPath>
+    </Reference>
+    <Reference Include="DotLog, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotLibs\DotLog.dll</HintPath>
+    </Reference>
+    <Reference Include="DotTimer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotLibs\DotTimer.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotDependLibs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,10 +58,43 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="AssetBridge.cs" />
+    <Compile Include="AssetLoader\AAssetLoader.cs" />
+    <Compile Include="AssetLoader\AAssetNode.cs" />
+    <Compile Include="AssetLoader\AAsyncOperation.cs" />
+    <Compile Include="AssetLoader\AssetHandler.cs" />
+    <Compile Include="AssetLoader\AssetLoaderData.cs" />
+    <Compile Include="AssetManager.cs" />
+    <Compile Include="AssetManager_Clean.cs" />
+    <Compile Include="AssetManager_Scene.cs" />
+    <Compile Include="BundleLoader\BundleAssetNode.cs" />
+    <Compile Include="BundleLoader\BundleAsyncOperation.cs" />
+    <Compile Include="BundleLoader\BundleLoader.cs" />
+    <Compile Include="BundleLoader\BundleNode.cs" />
+    <Compile Include="BundleLoader\BundleSceneLoader.cs" />
+    <Compile Include="DatabaseLoader\DatabaseAssetNode.cs" />
+    <Compile Include="DatabaseLoader\DatabaseAsyncOperation.cs" />
+    <Compile Include="DatabaseLoader\DatabaseLoader.cs" />
+    <Compile Include="DatabaseLoader\DatabaseSceneLoader.cs" />
+    <Compile Include="Datas\AssetAddressConfig.cs" />
+    <Compile Include="Datas\AssetBundleConfig.cs" />
+    <Compile Include="Datas\AssetConst.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SceneLoader\ASceneLoader.cs" />
+    <Compile Include="SceneLoader\SceneHandler.cs" />
+    <Compile Include="SceneLoader\SceneLoaderData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>set pdbPath=$(TargetDir)$(ProjectName).pdb
+if exist %25pdbPath%25 (
+del /q %25pdbPath%25
+)</PreBuildEvent>
+  </PropertyGroup>
 </Project>
